<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ligth_blue"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_msg" >

        <ImageView
            android:id="@+id/restaurant_imgStatus"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin5dp"
            android:src="@drawable/msg1"
            android:contentDescription="@string/lblImage" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin5dp"
            android:layout_marginTop="@dimen/margin5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblDate"
                android:textColor="@color/gray"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/restaurant_txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_margin="@dimen/margin5dp"
            android:layout_weight="0.85"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblComment"
                android:textColor="@color/gray"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/restaurant_txtMsg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>