<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ligth_blue"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin25dp"
        android:layout_marginTop="@dimen/margin25dp"
        android:background="@drawable/border" >

        <ImageView
            android:id="@+id/gate_imgGate1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/lblImage"
            android:src="@drawable/msg1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/margin25dp"
            android:text="@string/lblGate1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblDistance"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/gate_txtDistance1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:text="@string/lblNoGPS"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin25dp"
        android:background="@drawable/border" >

        <ImageView
            android:id="@+id/gate_imgGate2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lblImage"
            android:src="@drawable/msg1" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/margin25dp"
            android:text="@string/lblGate2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblDistance"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/gate_txtDistance2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblNoGPS"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin25dp"
        android:background="@drawable/border" >

        <ImageView
            android:id="@+id/gate_imgGate3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lblImage"
            android:src="@drawable/msg1" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/margin25dp"
            android:text="@string/lblGate3"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblDistance"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/gate_txtDistance3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblNoGPS"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right" >

        <Button
            android:id="@+id/gate_btnRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lblRefresh" />

        <Button
            android:id="@+id/gate_btnSend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lblInQueue" />
    </LinearLayout>

</LinearLayout>